Added action buttons to the player_turn game phase and connected GUI to turn/player flow, used enums for controlling turn phases

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -71,7 +71,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=Blackjack_Project2_Group40
-main.class=blackjack_combine.Blackjack_Combine
+main.class=blackjack_project2_group40.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
